# valheim-dedicated-server-docker-helm

./: .gitignore  .pre-commit-config.yaml  README.md  index.yaml  pyproject.toml
.github/actions/setup-environment/: action.yaml
.github/workflows/: code-quality.yaml  docker-image.yaml  helm-lint.yaml  helm-release.yaml  publish-manual.yaml  publish.yaml  test-image-build.yaml
charts/valheim/: Chart.yaml  README.md  values.yaml
charts/valheim/templates/: NOTES.txt  headless-service.yaml  secret.yaml  service.yaml  services.yaml  statefulset.yaml
examples/docker-compose/: README.md  compose.yaml
tests/: conftest.py  constants.py  test_image_build.py
